--- a/capstone-git/PKGBUILD
+++ b/capstone-git/PKGBUILD
@@ -23,6 +23,6 @@ build() {
 
 package() {
 	cd $pkgname
-	make DESTDIR="$pkgdir" install
+	make DESTDIR="$pkgdir" LIBDIR="$pkgdir"/usr/lib install
 }
 
