--- a/capstone/PKGBUILD
+++ b/capstone/PKGBUILD
@@ -18,6 +18,6 @@ build() {
 
 package() {
 	cd $pkgname-$pkgver
-	make DESTDIR="$pkgdir" install
+	make DESTDIR="$pkgdir" LIBDIR="$pkgdir"/usr/lib install
 }
 
