--- a/swc-git/PKGBUILD
+++ b/swc-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="A primitive drawing library targeted at Wayland"
 arch=('i686' 'x86_64')
 url="https://github.com/michaelforney/swc"
 makedepends=('git')
-depends=('wayland' 'libdrm' 'libevdev' 'libxcb' 'xcb-util-wm' 'libxkbcommon' 'pixman' 'wld')
+depends=('systemd' 'fontconfig' 'libdrm' 'libevdev' 'xcb-util-wm' 'libxkbcommon' 'pixman' 'wld')
 provides=('swc')
 source=("$pkgname"::'git+https://github.com/michaelforney/swc')
 sha256sums=('SKIP')
