--- a/utop-git/PKGBUILD
+++ b/utop-git/PKGBUILD
@@ -8,7 +8,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/michaelforney/utop"
 license=('MIT')
 makedepends=('git')
-depends=()
+depends=('ncurses')
 provides=('utop')
 source=("$pkgname"::'git+https://github.com/bobrippling/utop')
 sha256sums=('SKIP')
