--- a/wld-git/PKGBUILD
+++ b/wld-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="A primitive drawing library targeted at Wayland"
 arch=('i686' 'x86_64')
 url="https://github.com/michaelforney/wld"
 makedepends=('git')
-depends=('wayland' 'libintelbatch')
+depends=('fontconfig' 'libdrm' 'pixman' 'wayland')
 provides=('wld')
 source=("$pkgname"::'git+https://github.com/michaelforney/wld')
 sha256sums=('SKIP')
