--- a/capstone/PKGBUILD
+++ b/capstone/PKGBUILD
@@ -5,6 +5,7 @@ pkgver=2.0
 pkgrel=1
 pkgdesc='Capstone is a lightweight multi-platform, multi-architecture disassembly framework.'
 arch=('i686' 'x86_64')
+depends=('glibc')
 license='BSD'
 url='http://www.capstone-engine.org'
 
