--- a/capstone/PKGBUILD
+++ b/capstone/PKGBUILD
@@ -1,16 +1,16 @@
 # Maintainer: Michael Gehring <mg@ebfe.org>
 
 pkgname=capstone
-pkgver=2.0
+pkgver=2.1.2
 pkgrel=1
 pkgdesc='Capstone is a lightweight multi-platform, multi-architecture disassembly framework.'
 arch=('i686' 'x86_64')
 depends=('glibc')
-license='BSD'
+license=('BSD')
 url='http://www.capstone-engine.org'
 
-source=(http://www.capstone-engine.org/download/2.0/$pkgname-$pkgver.tgz)
-sha256sums=('5d871b1e52047d1b2882bbcc6f049205ba6acc8d55d746937d22af5d0b33fa9e')
+source=("http://www.capstone-engine.org/download/$pkgver/$pkgname-$pkgver.tgz")
+sha256sums=('49e41d662c5ed4dcd391ec4cfce75fb31ca4bfd245eba9e8f0cb69d6f6e8d7cc')
 
 build() {
 	cd $pkgname-$pkgver
