--- a/utop-git/PKGBUILD
+++ b/utop-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Michael Gehring <mg@ebfe.org>
 
 pkgname=utop-git
-pkgver=20130921.da35998
+pkgver=20140407.d5aab21
 pkgrel=1
 pkgdesc="process monitor"
 arch=('i686' 'x86_64')
@@ -28,6 +28,7 @@ package() {
 	cd "$srcdir/$pkgname"
 	mkdir -p $pkgdir/usr/bin
 	make PREFIX="$pkgdir"/usr install
+	install -D -m644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
 
 
