--- a/capstone/PKGBUILD
+++ b/capstone/PKGBUILD
@@ -1,10 +1,11 @@
 # Maintainer: Michael Gehring <mg@ebfe.org>
 pkgname=capstone
 pkgver=2.1.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Capstone is a lightweight multi-platform, multi-architecture disassembly framework.'
 arch=('i686' 'x86_64')
 depends=('glibc')
+options=('staticlibs')
 license=('BSD')
 url='http://www.capstone-engine.org'
 
