swc: install license

--- a/swc-git/PKGBUILD
+++ b/swc-git/PKGBUILD
@@ -10,6 +10,7 @@ makedepends=('git')
 depends=('libsystemd' 'libevdev' 'xcb-util-wm' 'libxkbcommon' 'wld')
 provides=('swc')
 options=('staticlibs')
+license=("MIT")
 source=("$pkgname"::'git+https://github.com/michaelforney/swc')
 sha256sums=('SKIP')
 
@@ -26,6 +27,7 @@ build() {
 package() {
 	cd "$srcdir/$pkgname"
 	make PREFIX=/usr DESTDIR="$pkgdir" install
+	install -D -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/COPYING"
 }
 
 
