--- a/python2-scruffy-git/PKGBUILD
+++ b/python2-scruffy-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc='Scruffy is a simple framework for managing the environment in which a P
 arch=('i686' 'x86_64')
 license=('custom')
 url='https://github.com/snare/scruffy'
-depends=('python2')
+depends=('python2' 'python2-pygments')
 conflicts=('python2-scruffy')
 provides=('python2-scruffy')
 source=("$pkgname"::'git+https://github.com/snare/scruffy')
