libmill: fix prefix

--- a/libmill/PKGBUILD
+++ b/libmill/PKGBUILD
@@ -2,7 +2,7 @@
 pkgname=libmill
 pkgver=0.11.beta
 _pkgver=0.11-beta
-pkgrel=2
+pkgrel=3
 pkgdesc="Go-style concurrency in C"
 arch=('i686' 'x86_64')
 url="http://libmill.org"
@@ -15,7 +15,7 @@ sha1sums=("88e58e05b88a7c91e31c97d6b404da185817b6a9")
 
 build() {
 	cd "$srcdir/$pkgname-$_pkgver"
-	./configure
+	./configure --prefix=/usr
 	make
 	# make check
 }
