libmill: build on arm

--- a/libmill/PKGBUILD
+++ b/libmill/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=0.19.rc
 _pkgver=0.19-rc
 pkgrel=1
 pkgdesc="Go-style concurrency in C"
-arch=('i686' 'x86_64')
+arch=('armv7h' 'i686' 'x86_64')
 url="http://libmill.org"
 options=('staticlibs')
 depends=('glibc')
