--- a/9mount-hg/PKGBUILD
+++ b/9mount-hg/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=9mount-hg
 pkgver=r37.c6da9cac8d01
 pkgrel=1
 pkgdesc='9mount is a set of SUID tools for mounting 9p filesystems via v9fs.'
-arch=('i686' 'x86_64')
+arch=('armv7h' 'i686' 'x86_64')
 depends=('glibc')
 license=('ISC')
 url='http://sqweek.net/code/9mount/'
