--- a/libmill/PKGBUILD
+++ b/libmill/PKGBUILD
@@ -1,7 +1,6 @@
 # Maintainer: Michael Gehring <mg@ebfe.org>
 pkgname=libmill
-pkgver=0.20.rc
-_pkgver=0.20-rc
+pkgver=1.0
 pkgrel=1
 pkgdesc="Go-style concurrency in C"
 arch=('armv7h' 'i686' 'x86_64')
@@ -9,18 +8,18 @@ url="http://libmill.org"
 options=('staticlibs')
 depends=('glibc')
 license=('MIT')
-source=("http://libmill.org/$pkgname-$_pkgver.tar.gz")
-sha1sums=("1d55392ec3ff9fe97dc93e542fc2aab835c668a8")
+source=("http://libmill.org/$pkgname-$pkgver.tar.gz")
+sha1sums=("d07f3cb76c6eb700157dbf1d850c9e1bc3aa95c5")
 
 build() {
-	cd "$srcdir/$pkgname-$_pkgver"
+	cd "$srcdir/$pkgname-$pkgver"
 	./configure --prefix=/usr
 	make
 	make check
 }
 
 package() {
-	cd "$srcdir/$pkgname-$_pkgver"
+	cd "$srcdir/$pkgname-$pkgver"
 	make DESTDIR="$pkgdir" install
 	install -Dm644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 }
